--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <li><a href="#">المنتجات</a></li>
                     <li><a href="#">الخدمات</a></li>
                     <li><a href="#">تواصل معنا</a></li>
-                    <li><a href="#">تسجيل الدخول</a></li>
+                    <li><a href="login.html">تسجيل الدخول</a></li>
                 </ul>
             </div>
 
